--- a/templates/layouts/parts/_header.njk
+++ b/templates/layouts/parts/_header.njk
@@ -49,7 +49,7 @@
 						<div class="input-group">
 							<input autocomplete="off" class="usagov-search-autocomplete form-control" id="query-mobile" name="query" placeholder="Search" type="text">
 							<input class="form-control" name="utf8" value="✓" type="hidden">
-							<input class="form-control" id="affiliate" name="affiliate" value="copyright" type="hidden">
+							<input class="form-control" id="affiliate2" name="affiliate" value="copyright" type="hidden">
 							<span id="search-icon-mobile" class="input-group-addon">
 								<button type="submit">
 									<i class="fa fa-search" aria-hidden="true"></i>
