--- a/templates/pages/index.njk
+++ b/templates/pages/index.njk
@@ -44,17 +44,22 @@
         <h2 class="modal-title" id="modal-heading">Choose the type of work to register:</h2>
       </div>
       <div class="modal-body">
-				<div class="form-group">
-					<div class="checkbox">
-					  <label><input type="checkbox" name="form-view"> Start in form view</label>&emsp;<a href="#info" data-toggle="popover" title="What is Form View?" data-content="&ldquo;Form view&rdquo; is a compact display of the form designed to allow users familiar with the form to fill it out more quickly."><i class="fa fa-question-circle"></i> What is this?</a>
+				<p class="text-right">
+				  <a href="#info" data-toggle="popover" data-placement="left" data-content="&ldquo;Form view&rdquo; is a compact display of the form designed to allow users familiar with the form to fill it out more quickly."><i class="fa fa-question-circle"></i> What is "Form View"?</a>
+				</p>
+        <div class="list-group-custom">
+					<div class="list-group-custom-item">
+						<a href="register-sound-recording--wizard.html">Sound Recording</a>
+						<a href="register-sound-recording--form.html"><em>Start in Form View</em></a>
 					</div>
-				</div>
-        <div class="list-group">
-					<a href="register-sound-recording.html" class="list-group-item">Sound Recording</a>
-					<a href="register-sound-recording.html" class="list-group-item">Video Recording</a>
-					<a href="register-sound-recording.html" class="list-group-item">Works and Lyrics</a>
-					<a href="register-sound-recording.html" class="list-group-item">Sound Recording</a>
-					<a href="register-sound-recording.html" class="list-group-item">Sound Recording</a>
+					<div class="list-group-custom-item">
+						<a href="register-sound-recording--wizard.html">Video Recording</a>
+						<a href="register-sound-recording--form.html"><em>Start in Form View</em></a>
+					</div>
+					<div class="list-group-custom-item">
+						<a href="register-sound-recording--wizard.html">Works and Lyrics</a>
+						<a href="register-sound-recording--form.html"><em>Start in Form View</em></a>
+					</div>
         </div>
       </div>
       <div class="modal-footer">
