--- a/css/app.css
+++ b/css/app.css
@@ -168,6 +168,14 @@
   background: #aa272f none;
   color: #fff;
 }
+.table address {
+  margin-bottom: 0;
+}
+.table-narrow {
+  width: auto;
+  min-width: 320px;
+  border-bottom: 1px solid #ddd;
+}
 .form-group label span.note {
   font-weight: normal;
 }
@@ -256,35 +264,58 @@ select.form-control:not([multiple]) {
   margin-left: 0.1em;
   line-height: 1em;
 }
-.form-section {
+.form-section,
+.form-power-wrapper {
   background-color: #f2f2f2;
   padding: 36px;
   margin-bottom: 24px;
+}
+@media only screen and (max-width: 768px) {
+  .form-section,
+  .form-power-wrapper {
+    padding: 10px 4px;
+  }
 }
 .form-section-label {
   color: #234a5e;
   margin-bottom: 36px;
   margin-top: 0;
-  text-align: Center;
+  font-weight: 600;
   position: relative;
 }
 .form-section-label:after {
   content: "";
   position: absolute;
   bottom: -16px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 0;
   display: block;
   width: 140px;
   height: 6px;
-  background-color: #ddd;
+  background-color: #4180a0;
 }
-.form-section .form-actions {
+.form-section .form-actions,
+.form-power-wrapper .form-actions {
   border-top: 1px solid #c8c8c8;
   padding: 12px 0;
 }
 .form-section hr {
   border-color: #e1e1e1;
+}
+.fieldset-setoff {
+  background-color: #fff;
+  padding: 12px;
+}
+.fieldset-setoff legend {
+  position: relative;
+  top: 24px;
+  border-bottom: 0 none;
+  font-size: 20px;
+}
+.form-power-wrapper .form-direction {
+  margin-top: 12px;
+}
+.form-power-wrapper .table {
+  background-color: #fff;
 }
 .form-sub-section {
   background-color: #fff;
@@ -319,6 +350,9 @@ select.form-control:not([multiple]) {
   flex-grow: 1;
   margin: 0 0 10px 0;
 }
+.form-repeating-section {
+  margin-bottom: 1em;
+}
 .form-flex {
   display: flex;
   align-items: center;
@@ -328,6 +362,82 @@ select.form-control:not([multiple]) {
 }
 .form-flex-grow {
   flex-grow: 1;
+}
+.form-grid > .form-group {
+  padding: 0.75em;
+  margin: 0;
+  border-bottom: 1px solid #ddd;
+  background-color: #fff;
+}
+@media only screen and (min-width: 768px) {
+  .form-grid {
+    display: flex;
+    flex-wrap: wrap;
+    clear: both;
+  }
+  .form-grid > .form-group {
+    flex-grow: 1;
+    border-right: 1px solid #ddd;
+  }
+  .form-grid:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 51px;
+    width: 1px;
+    height: 100%;
+    background-color: #f2f2f2;
+  }
+  .form-grid .form-grid-col-1 {
+    width: 8.33333333%;
+  }
+  .form-grid .form-grid-col-2 {
+    width: 16.66666667%;
+  }
+  .form-grid .form-grid-col-3 {
+    width: 25%;
+  }
+  .form-grid .form-grid-col-4 {
+    width: 33.33333333%;
+  }
+  .form-grid .form-grid-col-5 {
+    width: 41.66666667%;
+  }
+  .form-grid .form-grid-col-6 {
+    width: 50%;
+  }
+  .form-grid .form-grid-col-7 {
+    width: 58.33333333%;
+  }
+  .form-grid .form-grid-col-8 {
+    width: 66.66666667%;
+  }
+  .form-grid .form-grid-col-9 {
+    width: 75%;
+  }
+  .form-grid .form-grid-col-10 {
+    width: 83.33333333%;
+  }
+  .form-grid .form-grid-col-11 {
+    width: 111200%;
+  }
+  .form-grid .form-grid-col-12 {
+    width: 100%;
+  }
+}
+.power-header {
+  padding: 0.75em 0;
+  margin-top: 2em;
+  margin-bottom: 0;
+  color: #234a5e;
+  font-weight: 600;
+  border-bottom: 3px solid #4180a0;
+}
+@media only screen and (max-width: 768px) {
+  .power-header {
+    margin-top: 0.5em;
+    padding: 0.5em;
+  }
 }
 .alert {
   border: 0 none;
@@ -382,6 +492,32 @@ select.form-control:not([multiple]) {
   text-transform: uppercase;
   color: #959595;
   letter-spacing: 1px;
+}
+.list-group-custom-item {
+  display: flex;
+  border: solid #ddd;
+  border-width: 0 1px;
+}
+.list-group-custom-item:hover a {
+  background-color: #f5f5f5;
+}
+.list-group-custom-item a {
+  color: #555;
+  display: block;
+  flex-grow: 1;
+  position: relative;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+  background-color: #fff;
+  border: solid #ddd;
+  border-width: 1px 0;
+}
+.list-group-custom-item a:hover,
+.list-group-custom-item a:focus {
+  color: #aa272f;
+}
+.list-group-custom-item a:last-child {
+  text-align: right;
 }
 .panel-primary > .panel-heading {
   background: #32637c none;
@@ -552,7 +688,7 @@ h2 {
   font-weight: 400;
 }
 h3 {
-  font-weight: 300;
+  font-weight: 400;
 }
 h6 {
   font-weight: 300;
@@ -690,6 +826,26 @@ footer {
   footer {
     padding-left: 20px;
     padding-right: 20px;
+  }
+}
+@media (min-width: 768px) {
+  .col-sm-sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 30px;
+  }
+  .col-sm-last + * {
+    clear: left;
+  }
+}
+@media (min-width: 992px) {
+  .col-md-sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 30px;
+  }
+  .col-md-last + * {
+    clear: left;
   }
 }
 @media print {
