Updated for packaging.

--- a/templates/pages/register-sound-recording--form.njk
+++ b/templates/pages/register-sound-recording--form.njk
@@ -957,7 +957,7 @@ use_deposit{% extends "public.njk" %}
 			this.claimants.push(this.blankClaimant());
 
 			// Set test data
-			this.addTestData();
+			// this.addTestData();
 		}
 	});
 </script>
