Made updates for demo in response to 7/16 feedback.

--- a/templates/pages/register-sound-recording--form.njk
+++ b/templates/pages/register-sound-recording--form.njk
@@ -658,7 +658,8 @@ use_deposit{% extends "public.njk" %}
 				</div>
 
 				<div class="form-actions text-center">
-					<button type="submit" class="btn btn-lg btn-primary">Submit <i class="fa fa-check"></i></button>
+					{# <button type="submit" class="btn btn-lg btn-primary">Submit <i class="fa fa-check"></i></button> #}
+					<a href="thank-you.html" class="btn btn-primary btn-lg">Submit <i class="fa fa-check"></i></a>
 				</div>
 			</div>
 		</div>
