Added brand variables to app.less.

--- a/less/app.less
+++ b/less/app.less
@@ -2,6 +2,14 @@
 @import "node_modules/bootstrap/less/variables";
 @import "modules/_mixins";
 
+// Copyright.gov colors
+@brand-primary:         #32637c; // #477480 <-- accent version?
+@brand-primary-dark: 		#234a5e; // Hover version...
+@brand-success:         #59bd8f; // #00a99c;
+@brand-info:            #33c3ed;
+@brand-warning:         #e9cd2d;
+@brand-danger:          #aa272f;
+
 @brand-labels:primary success info warning danger;
 
 @line-color:@gray-light;
